# mpl-histcolorbar

./: .gitignore  .readthedocs.yml  LICENSE.md  README.md  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
src/mpl-histcolorbar/: histcolorbar.py
src/mpl_histcolorbar/: __init__.py  _histcolorbar.py  histcolorbar.py
tests/: test_histcolorbar.py
