[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-histcolorbar"
version = "0.0.1"
authors = [
    { name = "Jannis Ahlers", email = "jannis.ahlers@monash.edu" }
]
license = { file = "LICENSE" }
description = "A histogram+colorbar for matplotlib"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["matplotlib", "colorbar", "histogram"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.4.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=20.8b1",
    "ruff>=0.3.0",
    "spinx>=3.5.3",
]

[project.urls]
Homepage = "https://github.com/jnahlers/mpl-histcolorbar"