[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-histcolorbar"
version = "0.1.0"
authors = [
    { name = "Jannis Ahlers", email = "jannis.ahlers@monash.edu" }
]
license = { file = "LICENSE" }
description = "A histogram+colorbar for matplotlib"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["matplotlib", "colorbar", "histogram"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "spinx",
    "sphinx_rtd_theme",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/jnahlers/mpl-histcolorbar"